fix: fixed button z-index

--- a/src/components/ui/Tooltip/Tooltip.module.scss
+++ b/src/components/ui/Tooltip/Tooltip.module.scss
@@ -66,6 +66,10 @@
         line-height: 21px;
         color: #989898;
     }
+    &__active_btn {
+        z-index: 3;
+        position: relative;
+    }
 }
 
 .top {
